refactor/remove-unused-persistence-layer