@@ -15,6 +15,26 @@ public class ScoringServiceImpl implements ScoringService {
 
     private final SkillNormalizer normalizer;
 
+    //  Stopwords
+    private static final Set<String> STOPWORDS = Set.of(
+            "the","a","an","and","or","to","of","in","on","with","for",
+            "is","are","was","were","be","been","being","we","you",
+            "they","he","she","it","as","at","by","from"
+    );
+
+    //  Valid Skills (expand this as needed)
+    private static final Set<String> VALID_SKILLS = Set.of(
+            "java","spring","springboot","react","reactjs","nodejs",
+            "docker","kubernetes","postgresql","mysql","redis",
+            "aws","git","rest","api","microservices","hibernate","jpa",
+            "c","c++","c#","go","python","javascript"
+    );
+
+    //  Special short skills
+    private static final Set<String> SPECIAL_SKILLS = Set.of(
+            "c","c++","c#","go","r"
+    );
+
     @Override
     public AIResponse calculateWithJD(String resumeText, String jd) {
 
@@ -33,6 +53,7 @@ public class ScoringServiceImpl implements ScoringService {
 
         return AIResponse.builder()
                 .ruleScore(score)
+                .skills(new ArrayList<>(resumeSkills))
                 .matchedKeywords(new ArrayList<>(matched))
                 .missingKeywords(new ArrayList<>(missing))
                 .suggestions(buildSuggestions(missing))
@@ -49,16 +70,43 @@ public class ScoringServiceImpl implements ScoringService {
         return AIResponse.builder()
                 .ruleScore(score)
                 .skills(new ArrayList<>(skills))
+                .matchedKeywords(Collections.emptyList())
+                .missingKeywords(Collections.emptyList())
                 .suggestions(List.of("Add measurable achievements"))
                 .build();
     }
 
+    //  CLEAN SKILL EXTRACTION
     private Set<String> extract(String text) {
         if (text == null) return new HashSet<>();
 
-        return Arrays.stream(text.toLowerCase().split("\\W+"))
-                .filter(s -> s.length() > 2)
+        String lower = text.toLowerCase();
+        Set<String> result = new HashSet<>();
+
+        //  Phrase detection
+        if (lower.contains("spring boot")) result.add("springboot");
+        if (lower.contains("react js") || lower.contains("react.js")) result.add("reactjs");
+        if (lower.contains("node js") || lower.contains("node.js")) result.add("nodejs");
+
+        //  Special normalization
+        if (lower.contains("c++") || lower.contains("cpp") || lower.contains("c plus plus")) {
+            result.add("c++");
+        }
+        if (lower.contains("c#")) result.add("c#");
+        if (lower.contains("golang")) result.add("go");
+
+        //  Token extraction
+        Set<String> tokens = Arrays.stream(lower.split("[^a-zA-Z0-9+#.]+"))
+                .filter(s -> s.length() > 2 || SPECIAL_SKILLS.contains(s))
+                .filter(s -> !STOPWORDS.contains(s))
                 .collect(Collectors.toSet());
+
+        //  Keep only valid skills
+        tokens.stream()
+                .filter(VALID_SKILLS::contains)
+                .forEach(result::add);
+
+        return result;
     }
 
     private Set<String> normalize(Set<String> skills) {
@@ -66,6 +114,9 @@ public class ScoringServiceImpl implements ScoringService {
     }
 
     private List<String> buildSuggestions(Set<String> missing) {
-        return missing.stream().map(s -> "Add skill: " + s).toList();
+        return missing.stream()
+                .filter(VALID_SKILLS::contains)
+                .map(s -> "Add skill : " + s)
+                .collect(Collectors.toList());
     }
 }
